--- a/frontend/src/components/navigation/navbar.css
+++ b/frontend/src/components/navigation/navbar.css
@@ -17,7 +17,6 @@
 
     font-size: 2.125rem;
     color: var(--theme-color4);
-    z-index: 3;
     max-width: 100vw;
 }
 
